--- a/tmux.conf
+++ b/tmux.conf
@@ -45,7 +45,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # disable mouse integration
-setw -g mouse-utf8 off
+# setw -g mouse-utf8 off
 setw -g mouse off
 
 # use all colors
