--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # set command prefix to Cntl-a from Cntl-b
 set -g prefix C-a
@@ -46,7 +46,7 @@ bind -r L resize-pane -R 5
 
 # disable mouse integration
 # setw -g mouse-utf8 off
-setw -g mouse off
+# setw -g mouse off
 
 # use all colors
 set -g default-terminal "xterm-256color"
@@ -78,4 +78,4 @@ set -g message-bg black
 set -g message-attr bright
 
 # increase history buffer
-set-option -g history-limit 3500
+set-option -g history-limit 7500
