--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
+if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
 
 # set command prefix to Cntl-a from Cntl-b
 set -g prefix C-a
