Updated syntax for copy-pasting to clipboard

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,6 +34,11 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# vi mode for copy/paste see http://www.rushiagr.com/blog/2016/06/16/everything-you-need-to-know-about-tmux-copy-pasting/
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+
 # use PREFIX CTRL - h and PREFIX CTRL - l to cycle through the windows
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
